force-app/main/default/objects/aecm__Process_Step__c/aecm__Process_Step__c.object-meta.xml
<CustomObject>
    <label>Process Step</label>
    <nameField>
        <label>Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>