force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>aecm__Completion_Time__c</fullName>
    <inlineHelpText>Provide the time it takes to complete this process step in minutes  i.e. [15 min = 15, 1 hour = 60, 3 Hours = 180] This should be cumulative total hours not individual resource hours.</inlineHelpText>
    <label>Completion Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>