force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>aecm__Cost_Rate__c</fullName>
    <defaultValue>65</defaultValue>
    <inlineHelpText>Provide an average resource hour cost rate for this step. This should take into account cost rates for different skills and levels.</inlineHelpText>
    <label>Cost Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>