force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <inlineHelpText>Enter a description for this step up to 2000 characters.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>