force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Process__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process__c</fullName>
    <inlineHelpText>Parent process these steps belong to.</inlineHelpText>
    <label>Process</label>
    <referenceTo>aecm__Process__c</referenceTo>
    <relationshipLabel>Process Steps</relationshipLabel>
    <relationshipName>Process_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>