force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Resources__c.field-meta.xml
<CustomField>
    <fullName>aecm__Resources__c</fullName>
    <inlineHelpText>Enter the number of people resources involved in completing this step.</inlineHelpText>
    <label>Resources</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>