force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Step_Cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Step_Cost__c</fullName>
    <formula>/* Because completion time is in minutes, we need to convert per hour cost rate to minute cost */
aecm__Completion_Time__c * (aecm__Cost_Rate__c/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>