force-app/main/default/objects/aecm__Process_Step__c/fields/aecm__Step_Number__c.field-meta.xml
<CustomField>
    <fullName>aecm__Step_Number__c</fullName>
    <inlineHelpText>Enter a process step number or ID. This should correspond with numbering in related diagram(s).</inlineHelpText>
    <label>Step Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>