force-app/main/default/objects/aecm__Process_Step__c/fields/L2_Process__c.field-meta.xml
<CustomField>
    <fullName>L2_Process__c</fullName>
    <label>L2 Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>